Update html dimanche .html

--- a/devoir jeux vidéo/html dimanche .html
+++ b/devoir jeux vidéo/html dimanche .html
@@ -15,8 +15,8 @@
        <Top>  
         <Stats> 
           <name> 
-            <div> hero </div> <div> hero 2 </div>
-            <div> hero 3 </div> <div> hero 4 </div>
+            <div> Je </div> <div> suis </div>
+            <div> Mauvais </div> <div> DSL </div>
           </name>
         
           <health>
