Update html dimanche .html

--- a/devoir jeux vidéo/html dimanche .html
+++ b/devoir jeux vidéo/html dimanche .html
@@ -28,7 +28,7 @@
             </button>
 
             <button disabled class="personnage" id="butonMonstre2">
-              <img src="images/idle_dragon.gif" id="monstre_2" class="imgPerso">   
+              <img src="bee.png" id="monstre_2" class="imgPerso">   
                 <br>
                 <div id="monstre2stats" >
                   <div> Dragon</div> <br>
@@ -38,7 +38,7 @@
             </button>
 
             <button disabled class="personnage" id="butonMonstre3">
-              <img src="images/idle_lizard.gif" id="monstre_3"  class="imgPerso">  
+              <img src="bat.png" id="monstre_3"  class="imgPerso">  
               <br>
                 <div id="monstre3stats" >
                   <div>Lezard</div> <br>
@@ -102,7 +102,7 @@
 
 
            <button  onclick="clickplayer('personnage2')" id="butonPerso2" class="personnage" enabled>
-              <img src="images/idle_perso2.gif"   id="perso2" class="imgPerso">
+              <img src="sarabe.png"   id="perso2" class="imgPerso">
                 <div>Sorcière <br>
                    <label class="labelAvancement" id="player2pvnumber">100</label>
                    <progress  value="100" max="100" class="avancement" id="player2pv"></progress>
@@ -133,7 +133,7 @@
     <div id="personnage3" class="personnage">
 
             <button  onclick="clickplayer('personnage3')" id="butonPerso3" class="personnage" enabled>
-              <img src="images/idle_perso3.gif"   id="perso3" class="imgPerso">
+              <img src="snake.png"   id="perso3" class="imgPerso">
                 <div>Assassin <br>
                    <label class="labelAvancement" id="player3pvnumber">100</label>
                    <progress  value="100" max="100" class="avancement" id="player3pv"></progress>
