Update html dimanche .html

--- a/devoir jeux vidéo/html dimanche .html
+++ b/devoir jeux vidéo/html dimanche .html
@@ -80,7 +80,7 @@
            
           <button onclick="defenseperso1()" class="buttonAction" id="buttondefenseperso1" enabled>
             <div>
-              <img type="image" src="images/shield_button.png" class="action" >
+              <img type="image" src="heartshield.gif" class="action" >
             </div>
           </button>
               
